--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^3.3",
+        "filament/actions": "^3.3.0",
+        "filament/filament": "3.3",
+        "filament/spatie-laravel-media-library-plugin": "^3.3",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-medialibrary": "^11.12",
         "spatie/laravel-permission": "^6.16",
         "tightenco/ziggy": "^2.0"
     },
