--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-medialibrary": "^11.12",
         "spatie/laravel-permission": "^6.16",
+        "stripe/stripe-php": "^17.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
