--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "@inertiajs/server": "^0.1.0",
         "daisyui": "^5.0.0"
     }
 }
